--- a/login.html
+++ b/login.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./style/styles.css">
+    <link rel="stylesheet" href="./style/stylelogin.css">
     <title>Login</title>
 </head>
 <body>
@@ -15,13 +16,14 @@
             <a href="#">About</a>
             <a href="#">Services</a>
             <a href="#">Contact</a>
-            <a href="#" class="btnLogin" onclick="openPage()">Login</a>
+            <button class="btnLogin-popup">Login</button>
         </nav>
     </header>
 
-    <div class="containerL">
+    <div id="container">
         <div class="wrapper">
             <span class="icon-close"><ion-icon name="close-outline"></ion-icon></span>
+    
             <div class="form-box login">
                 <h2>Login</h2>
                 <form action="#">
@@ -79,7 +81,7 @@
             </div>
         </div>
     </div>
-    
+
     <script src="script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
