--- a/login.html
+++ b/login.html
@@ -13,9 +13,9 @@
         <img class="logo" src="">
         <nav class="navigation">
             <a href="index.html">Home</a>
-            <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#">Contact</a>
+            <a href="about.html">About</a>
+            <a href="services.html">Services</a>
+            <a href="contact.html">Contact</a>
             <button class="btnLogin-popup">Login</button>
         </nav>
     </header>
