--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/styles.css">
     <link rel="stylesheet" href="./style/styleindex.css">
+    <link rel="icon" type="image/x-icon" href="./favicon/logo.ico">
     <title>Home</title>
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
 </head>
 <body>
 
     <header>
-        <img class="logo" src="">
+        <img class="logo" src="./img/logo.png">
         <nav class="navigation">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
