--- a/about.html
+++ b/about.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/styles.css">
     <link rel="stylesheet" href="./style/styleabout.css">
+    <link rel="icon" type="image/x-icon" href="./favicon/logo.ico">
     <title>About</title>
 </head>
 <body>
 
     <header>
-        <img class="logo" src="">
+        <img class="logo" src="./img/logo.png">
         <nav class="navigation">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
