--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./style/styles.css">
     <link rel="stylesheet" href="./style/styleabout.css">
     <link rel="icon" type="image/x-icon" href="./favicon/logo.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>About</title>
 </head>
 <body>
@@ -20,6 +21,36 @@
             <button class="btnLogin-popup" onclick="openPage()">Login</button>
         </nav>
     </header>
+
+    <h1>About us</h1>
+
+    <div class="container">
+        <div class="card">
+            <i></i>
+            <p></p>
+        </div>
+        <div class="card">
+            <i></i>
+            <p></p>
+        </div>
+        <div class="card">
+            <i></i>
+            <p></p>
+        </div>
+    </div>
+
+    <table class="table">
+        <thead class="table-dark">
+          <tr>
+            <th>2021</th>
+            <th>2022</th>
+            <th>2023</th>
+          </tr>
+        </thead>
+        <tbody>
+          ...
+        </tbody>
+      </table>
     
 
     <script src="./src/script.js"></script>
