--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="about.html">About</a>
             <a href="services.html">Services</a>
             <a href="contact.html">Contact</a>
-            <button class="btnLogin-popup" onclick="openPage()">Login</button>
+            <button class="btnLogin-popup">Login</button>
         </nav>
     </header>
 
@@ -33,6 +33,43 @@
             <img src="https://modelviewer.dev/shared-assets/icons/hand.png">
         </div>
     </model-viewer>
+
+    <button class="btnDown" id="btnDown">Down</button>
+
+    <div class="container">
+        <div class="card">
+            <div class="content">
+                <img src="">
+            </div>
+            <div class="tooltip">
+                <p></p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="content">
+                <img src="">
+            </div>
+            <div class="tooltip">
+                <p></p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="content">
+                <img src="">
+            </div>
+            <div class="tooltip">
+                <p></p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="content">
+                <img src="">
+            </div>
+            <div class="tooltip">
+                <p></p>
+            </div>
+        </div>
+    </div>
     
 
     <script src="./src/script.js"></script>
