--- a/index.html
+++ b/index.html
@@ -40,38 +40,49 @@
     <button class="btnDown" id="btnDown">Down</button>
 
     <div class="container">
-        <div class="card">
-            <div class="content">
-                <img src="">
+        <div class="cards-column">
+            <div class="card">
+                <div class="content">
+                    <img src="./img/m4.png">
+                </div>
+                <div class="text-box">BMW M4</div>
             </div>
-            <div class="tooltip">
-                <p></p>
+            <div class="card">
+                <div class="content">
+                    <img src="./img/X3.png">
+                </div>
+                <div class="text-box">BMW X3</div>
             </div>
-        </div>
-        <div class="card">
-            <div class="content">
-                <img src="">
+            <div class="card">
+                <div class="content">
+                    <img src="./img/X5.png">
+                </div>
+                <div class="text-box">BMW X5</div>
             </div>
-            <div class="tooltip">
-                <p></p>
-            </div>
-        </div>
-        <div class="card">
-            <div class="content">
-                <img src="">
-            </div>
-            <div class="tooltip">
-                <p></p>
-            </div>
-        </div>
-        <div class="card">
-            <div class="content">
-                <img src="">
-            </div>
-            <div class="tooltip">
-                <p></p>
+            <div class="card">
+                <div class="content">
+                    <img src="./img/7s.png">
+                </div>
+                <div class="text-box">BMW 7-Series</div>
             </div>
         </div>
+        <div class="text-content">
+            <div class="text-c-box">
+                <h2>BMW M4</h2>
+                <p>111</p>
+            </div>
+            <div class="text-c-box">
+                <h2>BMW X3</h2>
+                <p>111</p>
+            </div>
+            <div class="text-c-box">
+                <h2>BMW X5</h2>
+                <p>111</p>
+            </div>
+            <div class="text-c-box">
+                <h2>BMW 7-Series</h2>
+                <p>111</p>
+            </div>
     </div>
     
 
