--- a/index.html
+++ b/index.html
@@ -49,39 +49,43 @@
             </div>
             <div class="card">
                 <div class="content">
-                    <img src="./img/X3.png">
+                    <img src="./img/x3.png">
                 </div>
                 <div class="text-box">BMW X3</div>
             </div>
             <div class="card">
                 <div class="content">
-                    <img src="./img/X5.png">
+                    <img src="./img/x5.png">
                 </div>
                 <div class="text-box">BMW X5</div>
             </div>
             <div class="card">
                 <div class="content">
-                    <img src="./img/7s.png">
+                    <img src="./img/i7s.png">
                 </div>
                 <div class="text-box">BMW 7-Series</div>
             </div>
         </div>
         <div class="text-content">
-            <div class="text-c-box">
+            <div class="text-c-box" id="firstext">
                 <h2>BMW M4</h2>
-                <p>111</p>
+                <p>The BMW M4 is a high-performance sports coupe that combines dynamic design with advanced engineering. The 2024 lineup includes the M4 Coupé, M4 Competition Coupé, and the M4 Competition Convertible with M xDrive.</p>
+                <button class="More" onclick="openM4()">more</button>
             </div>
             <div class="text-c-box">
                 <h2>BMW X3</h2>
-                <p>111</p>
+                <p>The BMW X3 is a compact luxury SUV that combines performance, versatility, and advanced technology. Design and Dimensions: The X3 features a dynamic exterior with a prominent kidney grille and sleek LED headlights. Its dimensions provide ample interior space for passengers and cargo, making it suitable for both urban and off-road adventures.</p>
+                <button class="More" onclick="openX3()">more</button>
             </div>
             <div class="text-c-box">
                 <h2>BMW X5</h2>
-                <p>111</p>
+                <p>The BMW X5 is a midsize luxury SUV that seamlessly blends performance, comfort, and advanced technology. Design and Dimensions: The X5 features a bold exterior with a prominent kidney grille and sleek LED headlights. Its spacious interior offers ample room for passengers and cargo, making it suitable for both daily commutes and long journeys.</p>
+                <button class="More" onclick="openX5()">more</button>
             </div>
             <div class="text-c-box">
                 <h2>BMW 7-Series</h2>
-                <p>111</p>
+                <p>The 2024 BMW 7 Series represents a major leap in the luxury sedan category, combining cutting-edge technology with sophisticated performance. The model is available in several configurations, including fully electric (i7), hybrid (750e), and gasoline variants (740i, 760i). It boasts advanced features like BMW's iDrive 8.5 system, a luxurious and spacious interior, and a sleek exterior design.</p>
+                <button class="More" onclick="open7S()">more</button>
             </div>
     </div>
     
