--- a/about.html
+++ b/about.html
@@ -18,40 +18,9 @@
             <a href="about.html">About</a>
             <a href="services.html">Services</a>
             <a href="contact.html">Contact</a>
-            <button class="btnLogin-popup" onclick="openPage()">Login</button>
+            <button class="btnLogin-popup">Login</button>
         </nav>
     </header>
-
-    <h1>About us</h1>
-
-    <div class="container">
-        <div class="card">
-            <i></i>
-            <p></p>
-        </div>
-        <div class="card">
-            <i></i>
-            <p></p>
-        </div>
-        <div class="card">
-            <i></i>
-            <p></p>
-        </div>
-    </div>
-
-    <table class="table">
-        <thead class="table-dark">
-          <tr>
-            <th>2021</th>
-            <th>2022</th>
-            <th>2023</th>
-          </tr>
-        </thead>
-        <tbody>
-          ...
-        </tbody>
-      </table>
-    
 
     <script src="./src/script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
