--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
             <a href="about.html">About</a>
             <a href="services.html">Services</a>
             <a href="contact.html">Contact</a>
-            <button class="btnLogin-popup" onclick="openPage()">Login</button>
+            <button class="btnLogin-popup">Login</button>
         </nav>
     </header>
     
