--- a/index.html
+++ b/index.html
@@ -69,22 +69,22 @@
         <div class="text-content">
             <div class="text-c-box" id="firstext">
                 <h2>BMW M4</h2>
-                <p>The BMW M4 is a high-performance sports coupe that combines dynamic design with advanced engineering. The 2024 lineup includes the M4 Coupé, M4 Competition Coupé, and the M4 Competition Convertible with M xDrive.</p>
+                <p>The BMW M4 is the performance version of the BMW 4 Series coupe, offering an unmatched combination of power, agility, and luxury. Available in multiple versions such as the M4 Coupe and M4 Competition, it provides an exciting driving experience thanks to its turbocharged engine, rear-wheel or all-wheel drive options, and M-specific suspension. The M4 is known for its impressive acceleration, outstanding cornering ability, and responsive handling. Whether on a racetrack or the open road, the M4 delivers exhilarating performance while maintaining high levels of comfort and refinement.</p>
                 <button class="More" onclick="openM4()">more</button>
             </div>
             <div class="text-c-box">
                 <h2>BMW X3</h2>
-                <p>The BMW X3 is a compact luxury SUV that combines performance, versatility, and advanced technology. Design and Dimensions: The X3 features a dynamic exterior with a prominent kidney grille and sleek LED headlights. Its dimensions provide ample interior space for passengers and cargo, making it suitable for both urban and off-road adventures.</p>
+                <p></p>
                 <button class="More" onclick="openX3()">more</button>
             </div>
             <div class="text-c-box">
                 <h2>BMW X5</h2>
-                <p>The BMW X5 is a midsize luxury SUV that seamlessly blends performance, comfort, and advanced technology. Design and Dimensions: The X5 features a bold exterior with a prominent kidney grille and sleek LED headlights. Its spacious interior offers ample room for passengers and cargo, making it suitable for both daily commutes and long journeys.</p>
+                <p></p>
                 <button class="More" onclick="openX5()">more</button>
             </div>
             <div class="text-c-box">
                 <h2>BMW 7-Series</h2>
-                <p>The 2024 BMW 7 Series represents a major leap in the luxury sedan category, combining cutting-edge technology with sophisticated performance. The model is available in several configurations, including fully electric (i7), hybrid (750e), and gasoline variants (740i, 760i). It boasts advanced features like BMW's iDrive 8.5 system, a luxurious and spacious interior, and a sleek exterior design.</p>
+                <p></p>
                 <button class="More" onclick="open7S()">more</button>
             </div>
     </div>
