--- a/carsHtml/M4.html
+++ b/carsHtml/M4.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/styles.css">
     <link rel="icon" type="image/x-icon" href="../favicon/logo.ico">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>BMW M4</title>
 </head>
-<body>
+<body class="bodycars">
 
   <header>
     <img class="logo" src="../img/logo.png">
@@ -21,33 +21,92 @@
     </nav>
   </header>
 
-  <div class="containerMoreCars">
-    <h2 class="Carsh2"></h2>
-    <div id="carouselExample" class="carousel slide">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="..." class="d-block w-100" alt="...">
+  <div class="containerCars">
+    <h1>BMW M4 Description</h1>
+    <div class="containercarousel">
+      <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000" data-bs-wrap="true">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../img/carousel/m4v1.jpg" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="../img/carousel/m4v2.jpg" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="../img/carousel/m4v3.jpg" class="d-block w-100">
+          </div>
         </div>
-        <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
+    </div>
+    </div>
+  <button id="btnDownCars">Down</button>
+  </div>
+  <div class="containerTextCars">
+    <h1>Extended Information</h1>
+
+    <div class="TextCars">
+      <div class="TextCards">
+        <div class="card-title">Technical Specifications</div>
+        <div class="card-body">
+          <ul>
+            <p>Engine Type: 3.0L Turbocharged Inline-6</p>
+            <p>Power Output: 473 hp</p>
+            <p>Torque: 406 lb-ft</p>
+            <p>Transmission: 6-speed manual transmission</p>
+            <p>Acceleration (0-60 mph): Approximately 4.1 seconds</p>
+            <p>Top Speed: Electronically limited to 155 mph</p>
+            <p>Fuel Economy (EPA Estimate): 15 mpg city / 22 mpg highway</p>
+            <p>Weight: Approx. 3,800 lbs</p>
+          </ul>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
+
+      <div class="TextCards"">
+        <div class="card-title">Design</div>
+        <div class="card-body">
+          <ul>
+            <p>Exterior: A wider stance with flared wheel arches, wider rear tires, and a more muscular appearance. A bold kidney grille, wider and more imposing compared to standard 4 Series models. Optional carbon fiber elements, including roof and mirror caps for reduced weight</p>
+            <p>Interior: A driver-focused cockpit with M-specific displays and materials. Sports seats wrapped in Merino leather, designed to offer superior support. High-quality materials throughout, with customizable options for trims and colors. Ambient lighting options and an M steering wheel with integrated performance controls.</p>
+          </ul>
+        </div>
+      </div>
+
+      <div class="TextCards"">
+        <div class="card-title">Systems and Technology</div>
+        <div class="card-body">
+          <ul>
+            <p>Infotainment System: BMW iDrive 7.0 or 8.0, depending on the model year, with a 12.3-inch digital display. Apple CarPlay and Android Auto integration. Available Gesture Control for touch-free control of media and navigation.</p>
+            <p>Driver Assistance Features: Parking Assistant Plus: Features automatic parallel and perpendicular parking. Adaptive Cruise Control: Maintains a set speed and distance from the car ahead, enhancing long-distance driving.</p>
+            <p>Performance Features: Launch Control: Ensures maximum acceleration during quick starts</p>
+          </ul>
+        </div>
+      </div>
+
+      <div class="TextCards"">
+        <div class="card-title">Cons</div>
+        <div class="card-body">
+          <ul>
+            <p>Price: The M4 is an expensive vehicle, especially the Competition version with the added options. The base price is already high, and adding extras like carbon fiber components and advanced tech packages increases the cost substantially.</p>
+            <p>Ride Comfort: Due to the sport-tuned suspension, the M4 may have a stiffer ride compared to other luxury coupes, which could be uncomfortable on rough roads or for long commutes.</p>
+            <p>Fuel Economy: With its high-performance engine, the M4's fuel economy is relatively low compared to more conventional cars in the same class. Frequent stops at the pump may be expected.</p>
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
 
-    <script src="../src/script.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+  <script src="../src/script.js"></script>
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+  <script>
+    const btnDownCars = document.getElementById('btnDownCars')
+    btnDownCars.addEventListener('click', () => {
+    window.scrollBy({
+        top: window.innerHeight,
+        behavior: 'smooth',
+    });
+});
+  </script>
 </body>
 </html>
