--- a/carsHtml/X3.html
+++ b/carsHtml/X3.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>BMW X3</title>
 </head>
-<body>
+<body class="bodycars">
 
   <header>
     <img class="logo" src="../img/logo.png">
@@ -21,34 +21,80 @@
     </nav>
   </header>
 
-  <div class="containerMoreCars">
-    <h2 class="Carsh2"></h2>
-    <div id="carouselExample" class="carousel slide">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="..." class="d-block w-100" alt="...">
+  <div class="containerCars">
+    <h1>BMW X3 Description</h1>
+    <div class="containercarousel">
+      <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000" data-bs-wrap="true">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../img/carousel/x3v1.jpg" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="../img/carousel/x3v2.jpg" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="../img/carousel/x3v3.jpg" class="d-block w-100">
+          </div>
         </div>
-        <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
+    </div>
+    </div>
+  <button id="btnDownCars">Down</button>
+  </div>
+  <div class="containerTextCars">
+    <h1>Extended Information</h1>
+
+    <div class="TextCars">
+      <div class="TextCards">
+        <div class="card-title">Card 1</div>
+        <div class="card-body">
+          <ul>
+            <p></p>
+          </ul>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
+
+      <div class="TextCards"">
+        <div class="card-title">Card 2</div>
+        <div class="card-body">
+          <ul>
+            <p></p>
+          </ul>
+        </div>
+      </div>
+
+      <div class="TextCards"">
+        <div class="card-title">Card 3</div>
+        <div class="card-body">
+          <ul>
+            <p></p>
+          </ul>
+        </div>
+      </div>
+
+      <div class="TextCards"">
+        <div class="card-title">Card 4</div>
+        <div class="card-body">
+          <ul>
+            <p></p>
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
 
-
-    <script src="../src/script.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+  <script src="../src/script.js"></script>
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+  <script>
+    const btnDownCars = document.getElementById('btnDownCars')
+    btnDownCars.addEventListener('click', () => {
+    window.scrollBy({
+        top: window.innerHeight,
+        behavior: 'smooth',
+    });
+});
+  </script>
 </body>
 </html>
