--- a/carsHtml/X3.html
+++ b/carsHtml/X3.html
@@ -45,37 +45,48 @@
 
     <div class="TextCars">
       <div class="TextCards">
-        <div class="card-title">Card 1</div>
+        <div class="card-title">Technical Specifications</div>
         <div class="card-body">
           <ul>
-            <p></p>
+            <p>Engine Type: 2.0L TwinPower Turbocharged Inline-4</p>
+            <p>Power Output: 248 hp</p>
+            <p>Torque: 258 lb-ft</p>
+            <p>Transmission: 8-speed automatic transmission</p>
+            <p>Acceleration (0-60 mph): 0-60 mph: 6.3 seconds</p>
+            <p>Fuel Economy: 23 mpg city / 29 mpg highway</p>
+            <p>Cargo Space: 28.7 cubic feet behind the rear seats, 62.7 cubic feet with the rear seats folded</p>
           </ul>
         </div>
       </div>
 
       <div class="TextCards"">
-        <div class="card-title">Card 2</div>
+        <div class="card-title">Design</div>
         <div class="card-body">
           <ul>
-            <p></p>
+            <p>Exterior: Front Fascia: A signature kidney grille with optional illuminated grille on some trims. Lighting: Adaptive LED headlights are standard, with optional Laserlight technology for enhanced visibility. Aerodynamics: Sculpted body lines enhance aerodynamics and aesthetic appeal.</p>
+            <p>Interior: Material Quality: Premium materials like Vernasca leather and fine wood or aluminum trims. Seats: Comfortable and supportive seats with available ventilated and heated options. Display: A 12.3-inch digital instrument cluster and a 12.3-inch touchscreen display (on higher trims). Ambient Lighting: Customizable colors to match your mood.</p>
           </ul>
         </div>
       </div>
 
       <div class="TextCards"">
-        <div class="card-title">Card 3</div>
+        <div class="card-title">Systems and Technology</div>
         <div class="card-body">
           <ul>
-            <p></p>
+            <p>Infotainment System: Voice assistant with natural language processing ("Hey BMW" functionality). Optional Gesture Control for hands-free operation.</p>
+            <p>Driver Assistance and Safety Systems: Active Driving Assistant (lane departure warning, forward collision warning, pedestrian detection). Parking sensors (front and rear).</p>
+            <p>Performance Features: Available xDrive (all-wheel-drive system) for improved traction and stability in various conditions. Dynamic Stability Control and Variable Sport Steering.</p>
           </ul>
         </div>
       </div>
 
       <div class="TextCards"">
-        <div class="card-title">Card 4</div>
+        <div class="card-title">Cons</div>
         <div class="card-body">
           <ul>
-            <p></p>
+            <p>Firm Ride on Sporty Models: The X3 M and M40i prioritize performance, leading to a stiffer ride compared to some competitors.</p>
+            <p>No Third Row: Unlike some competitors, the X3 is strictly a five-seater, which may limit its appeal to larger families.</p>
+            <p>Limited Electric Range (PHEV): The plug-in hybrid X3 xDrive30e has a relatively short electric-only range of around 20 miles, which might not satisfy those seeking more EV capability.</p>
           </ul>
         </div>
       </div>
