--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
             <div class="text-c-box">
                 <h2>BMW X3</h2>
-                <p></p>
+                <p>The BMW X3 is designed to cater to diverse driving needs, whether it’s a daily commute or an adventure-packed weekend. The SUV offers a perfect balance between sporty handling and comfortable driving dynamics, thanks to its range of engines and optional xDrive (BMW's all-wheel-drive system). With multiple trims including the standard X3, plug-in hybrid X3 xDrive30e, and high-performance X3 M, there’s a version for every type of driver. The X3's interior reflects BMW's dedication to luxury and technology, featuring high-quality materials, cutting-edge infotainment, and ample space for passengers and cargo. It’s a standout choice for those seeking refinement and performance in an SUV.</p>
                 <button class="More" onclick="openX3()">more</button>
             </div>
             <div class="text-c-box">
