New commit 26.11.2024 /contact

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="./style/styles.css">
     <link rel="stylesheet" href="./style/stylecontact.css">
     <link rel="icon" type="image/x-icon" href="./favicon/logo.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
     <title>Contact</title>
 </head>
 <body>
@@ -20,6 +22,44 @@
             <button class="btnLogin-popup">Login</button>
         </nav>
     </header>
+
+    <div class="container-contact">
+        <div class="container-img">
+            <img src="./img/bmwcontact.jpg">
+            <h3></h3>
+        </div>
+        <div class="container-right-text">
+            <ul>
+                <i class="bi bi-facebook" id="firsticon"></i>
+                <i class="bi bi-instagram"></i>
+                <i class="bi bi-twitter"></i>
+                <i class="bi bi-telegram"></i>
+            </ul>
+            <ul>
+                <h2>Need to get in touch?</h2>
+                <p>Have a question you would like to ask? </p>
+                <p>Contact our teams on the details below.</p>
+                <p></p>
+                <p class="strong">CUSTOMER CARE :</p>
+                <p>To get in touch with our customer care team, you can send an inquiry to: zakaznicky.servis.cz@bmw.com</p>
+                <p>If you follow us on social networks, you can send an inquiry on <a href="#">facebook</a> or <a href="#">instagram</a>.</p>
+                <p></p>
+                <p class="strong">CONTACT :</p>
+                <p>BMW Czech Republic s.r.o.</p>
+                <p></p>
+                <p class="withoutM">Metronom Business Center</p>
+                <p class="withoutM">Budova C, 1. patro</p>
+                <p class="withoutM">Bucharova 2817/13</p>
+                <p class="withoutM">158 00 Praha 5</p>
+                <p>Reception: +420 225 990 011 </p>
+                <p></p>
+                <p class="strong">PRESS :</p>
+                <p>David Haidinger</p>
+                <p>+420 225 990 052</p>
+                <p>david.haidinger@bmwgroup.com</p>
+            </ul>
+        </div>
+    </div>
     
 
     <script src="./src/script.js"></script>
