--- a/carsHtml/7S.html
+++ b/carsHtml/7S.html
@@ -37,44 +37,57 @@
           </div>
         </div>
     </div>
-    <button id="btnDownCars">Down</button>
+    </div>
+  <button id="btnDownCars">Down</button>
   </div>
   <div class="containerTextCars">
     <h1>Extended Information</h1>
 
     <div class="TextCars">
       <div class="TextCards">
-        <div class="card-title">Card 1</div>
+        <div class="card-title">Technical Specifications</div>
         <div class="card-body">
           <ul>
-            <p></p>
+            <p>Engine Type: 3.0L TwinPower Turbo Inline-6 with mild hybrid technology</p>
+            <p>Power Output: 375 hp</p>
+            <p>Torque: 398 lb-ft</p>
+            <p>Transmission: All combustion models come with an 8-speed automatic transmission</p>
+            <p>Acceleration (0-60 mph): 5.0 seconds</p>
+            <p>Fuel Economy: ~25 mpg city / 31 mpg highway</p>
+            <p>Cargo Space: 13.7 cubic feet for ICE models, slightly reduced for the i7 due to battery placement</p>
           </ul>
         </div>
       </div>
 
       <div class="TextCards"">
-        <div class="card-title">Card 2</div>
+        <div class="card-title">Design</div>
         <div class="card-body">
           <ul>
-            <p></p>
+            <p>Exterior: Front Fascia: Dominated by a large illuminated kidney grille and split-headlight design with optional crystal accents. Side Profile: Smooth and minimalist with flush door handles and elegant lines. Rear Design: Slim LED taillights emphasize the car’s width and luxury.</p>
+            <p>Interior: Material Quality: Premium materials like Merino leather, open-pore wood, and crystal controls. Ambient Lighting: Customizable lighting strips integrated into the dashboard and doors. Theater Screen (Optional): A 31.3-inch 8K display folds down for rear passengers, turning the car into a mobile cinema.
+            </p>
           </ul>
         </div>
       </div>
 
       <div class="TextCards"">
-        <div class="card-title">Card 3</div>
+        <div class="card-title">Systems and Technology</div>
         <div class="card-body">
           <ul>
-            <p></p>
+            <p>Infotainment System: iDrive 8.5 System: Features a curved 12.3-inch driver display and a 14.9-inch infotainment screen. Bowers & Wilkins Diamond Surround Sound System (optional).</p>
+            <p>Features: Forward Collision Warning with Automatic Emergency Braking. Adaptive Air Suspension: Automatically adjusts ride height and comfort. Augmented Reality Navigation: Projects navigation directions directly onto the windshield. Integral Active Steering: Rear-wheel steering for improved maneuverability.</p>
           </ul>
         </div>
       </div>
 
       <div class="TextCards"">
-        <div class="card-title">Card 4</div>
+        <div class="card-title">Cons</div>
         <div class="card-body">
           <ul>
-            <p></p>
+            <p>Price: The 7-Series starts at a high price, and adding optional features can significantly increase the cost.</p>
+            <p>Design Polarization: The bold exterior design, especially the split headlights and large grille, may not appeal to all buyers.</p>
+            <p>Weight: Due to advanced systems and, in the case of the i7, a heavy battery, the car’s weight can impact agility compared to smaller sedans.</p>
+            <p>Learning Curve for Technology: The abundance of tech features and the iDrive system may be overwhelming for less tech-savvy users.</p>
           </ul>
         </div>
       </div>
