--- a/carsHtml/M4.html
+++ b/carsHtml/M4.html
@@ -64,7 +64,7 @@
         <div class="card-title">Design</div>
         <div class="card-body">
           <ul>
-            <p>Exterior: A wider stance with flared wheel arches, wider rear tires, and a more muscular appearance. A bold kidney grille, wider and more imposing compared to standard 4 Series models. Optional carbon fiber elements, including roof and mirror caps for reduced weight</p>
+            <p>Exterior: A wider stance with flared wheel arches, wider rear tires, and a more muscular appearance. A bold kidney grille, wider and more imposing compared to standard 4 Series models. Optional carbon fiber elements, including roof and mirror caps for reduced weight.</p>
             <p>Interior: A driver-focused cockpit with M-specific displays and materials. Sports seats wrapped in Merino leather, designed to offer superior support. High-quality materials throughout, with customizable options for trims and colors. Ambient lighting options and an M steering wheel with integrated performance controls.</p>
           </ul>
         </div>
