--- a/carsHtml/X3.html
+++ b/carsHtml/X3.html
@@ -52,7 +52,7 @@
             <p>Power Output: 248 hp</p>
             <p>Torque: 258 lb-ft</p>
             <p>Transmission: 8-speed automatic transmission</p>
-            <p>Acceleration (0-60 mph): 0-60 mph: 6.3 seconds</p>
+            <p>Acceleration (0-60 mph): 6.3 seconds</p>
             <p>Fuel Economy: 23 mpg city / 29 mpg highway</p>
             <p>Cargo Space: 28.7 cubic feet behind the rear seats, 62.7 cubic feet with the rear seats folded</p>
           </ul>
