--- a/carsHtml/X5.html
+++ b/carsHtml/X5.html
@@ -45,37 +45,53 @@
 
     <div class="TextCars">
       <div class="TextCards">
-        <div class="card-title">Card 1</div>
+        <div class="card-title">Technical Specifications</div>
         <div class="card-body">
           <ul>
-            <p></p>
+            <p>Engine: 3.0L TwinPower Turbo Inline-6 with mild hybrid technology</p>
+            <p>Power: 375 hp</p>
+            <p>Torque: 398 lb-ft</p>
+            <p>Transmission: All models are equipped with an 8-speed automatic transmission</p>
+            <p>Acceleration (0-60 mph): 5.3 seconds</p>
+            <p>Fuel Economy: 21 mpg city / 26 mpg highway</p>
+            <p>Cargo Space: 33.9 cubic feet behind the second row</p>
           </ul>
         </div>
       </div>
 
       <div class="TextCards"">
-        <div class="card-title">Card 2</div>
+        <div class="card-title">Design</div>
         <div class="card-body">
           <ul>
-            <p></p>
+            <p>Exterior: Front Fascia: The iconic kidney grille, optionally illuminated, and slim adaptive LED headlights. Lighting: Optional BMW Laserlight technology for enhanced nighttime visibility. Off-Road Package: Adds skid plates and increased ride height for rugged terrain.</p>
+            <p>Interior: Material Quality: Premium leather, real wood, and aluminum trim options. Display: Curved display system featuring a 12.3-inch digital instrument cluster and a 14.9-inch infotainment screen. Ambient Lighting: Customizable LED lighting enhances the cabin atmosphere. Third Row (Optional): Suitable for children or short trips, adds flexibility for larger families. </p>
           </ul>
         </div>
       </div>
 
       <div class="TextCards"">
-        <div class="card-title">Card 3</div>
+        <div class="card-title">Systems and Technology</div>
         <div class="card-body">
           <ul>
-            <p></p>
+            <p>Premium audio systems, including the optional Bowers & Wilkins Diamond Surround Sound System.</p>
+            <p>Forward Collision Warning with Automatic Emergency Braking.</p>
+            <p>Blind-Spot Monitoring.</p>
+            <p>Lane Departure Warning.</p>
+            <p>Highway Assistant for hands-free driving on certain roads.</p>
+            <p>Parking Assistant Plus with a 360-degree camera.</p>
+            <p>Adaptive Cruise Control with Stop & Go.</p>
           </ul>
         </div>
       </div>
 
       <div class="TextCards"">
-        <div class="card-title">Card 4</div>
+        <div class="card-title">Cons</div>
         <div class="card-body">
           <ul>
-            <p></p>
+            <p>Third-Row Limitations: The optional third-row seating is cramped and suitable only for small passengers or short trips.</p>
+            <p>Fuel Efficiency: V8-powered models, like the M60i and X5 M, have below-average fuel economy compared to rivals.</p>
+            <p>Ride Comfort (Sportier Trims): Performance-oriented models may feel firmer and less comfortable on rough roads.</p> 
+            <p>Complex Infotainment System: The iDrive system, while powerful, can have a learning curve for new users.</p>
           </ul>
         </div>
       </div>
