--- a/contact.html
+++ b/contact.html
@@ -30,10 +30,10 @@
         </div>
         <div class="container-right-text">
             <ul>
-                <i class="bi bi-facebook" id="firsticon"></i>
-                <i class="bi bi-instagram"></i>
-                <i class="bi bi-twitter"></i>
-                <i class="bi bi-telegram"></i>
+                <i class="bi bi-facebook" id="firsticon" onclick="openfacebook()"></i>
+                <i class="bi bi-instagram" onclick="openinstagram()"></i>
+                <i class="bi bi-twitter" onclick="opentwitter()"></i>
+                <i class="bi bi-telegram" onclick="opentelegram()"></i>
             </ul>
             <ul>
                 <h2>Need to get in touch?</h2>
