--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
             </div>
             <div class="text-c-box">
                 <h2>BMW X5</h2>
-                <p></p>
+                <p>The BMW X5 is designed for those who want a blend of athletic performance and everyday practicality in a premium package. With a choice of powerful engines, an available plug-in hybrid model, and a high-performance X5 M variant, the X5 caters to a wide range of drivers. Its interior offers a luxurious experience, featuring high-quality materials, advanced infotainment, and generous space for passengers and cargo. The optional three-row seating adds further versatility.</p>
                 <button class="More" onclick="openX5()">more</button>
             </div>
             <div class="text-c-box">
                 <h2>BMW 7-Series</h2>
-                <p></p>
+                <p>The BMW 7-Series embodies executive elegance with its sophisticated design, state-of-the-art technology, and supreme comfort. With its focus on redefining modern luxury, the 7-Series is available with powerful internal combustion engines, plug-in hybrid options, and fully electric variants (i7). Inside, it offers a serene and customizable environment with premium materials, spacious accommodations, and innovative features like a theater screen for rear passengers.</p>
                 <button class="More" onclick="open7S()">more</button>
             </div>
     </div>
