--- a/carsHtml/X3.html
+++ b/carsHtml/X3.html
@@ -17,6 +17,7 @@
         <a href="../about.html">About</a>
         <a href="../services.html">Services</a>
         <a href="../contact.html">Contact</a>
+        <a href="../moreproducts.html">Products</a>
         <button class="btnLogin-popup">Login</button>
     </nav>
   </header>
