--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/styles.css">
     <link rel="stylesheet" href="./style/stylecontact.css">
+    <link rel="stylesheet" href="./stylemedia/responsive.css">
     <link rel="icon" type="image/x-icon" href="./favicon/logo.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
     <title>Contact</title>
 </head>
 <body>
+
+    <div class="navigationResponsive">
+        <div class="hamburger-menu" onclick="toggleMenu(event)">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+          </div>
+      
+          <div id="nav-links" class="nav-links">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="services.html">Services</a>
+            <a href="contact.html">Contact</a>
+            <a href="moreproducts.html">Products</a>
+            <button class="btnLogin-popup">Login</button>
+          </div>
+    </div>
 
     <header>
         <img class="logo" src="./img/logo.png">
